# Hello-CMake

./: .gitignore  CMakeLists.txt  Main.cpp
